--- a/index.html
+++ b/index.html
@@ -30,17 +30,13 @@
     searchBoxAndButtonContainer.appendChild(searchBox);
     searchBoxAndButtonContainer.appendChild(searchButton);
 
-    function search() {
+    async function search() {
         const img = document.querySelector('img');
         const inputField = document.getElementById('search-box');
         const query = inputField.value;
-        fetch(`https://api.giphy.com/v1/gifs/translate?api_key=VqotkVOn1dOwDtt32meVLN4Hphtpwp3L&s=${query}`)
-        .then(function(response) {
-            return response.json();
-        })
-        .then(function(jsonData) {
-            img.src = jsonData.data.images.original.url;
-        });
+        const response = await fetch(`https://api.giphy.com/v1/gifs/translate?api_key=VqotkVOn1dOwDtt32meVLN4Hphtpwp3L&s=${query}`)
+        const jsonData = await response.json();
+        img.src = jsonData.data.images.original.url;
     }
   </script>
 </body>
